--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
+	<header class="header">
+		
+	</header>
 	
 </body>
 </html>
