--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
 </head>
 <body>
 	<header class="header">
-		
+		<nav>
+			<ul id="menu">
+				<li class="links">
+					<a href="" class="menu__link"></a>
+				</li>
+				<li class="links">
+					<a href="" class="menu__link"></a>
+				</li>
+				<li class="links">
+					<a href="" class="logo">
+						<img src="#" alt="logo">
+					</a>
+				</li>
+				<li class="links">
+					<a href="" class="menu__link"></a>
+				</li>
+				<li class="links">
+					<a href="" class="menu__link"></a>
+				</li>
+			</ul>
+		</nav>
 	</header>
 	
 </body>
