--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 					<a href="" class="menu__link"></a>
 				</li>
 				<li class="links">
-					<a href="" class="logo">
-						<img src="#" alt="logo">
-					</a>
+					<img src="#" alt="logo" class="logo">
 				</li>
 				<li class="links">
 					<a href="" class="menu__link"></a>
