--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 		<nav>
 			<ul id="menu">
 				<li class="links">
-					<a href="" class="menu__link"></a>
+					<a href="" class="menu__link">About</a>
 				</li>
 				<li class="links">
-					<a href="" class="menu__link"></a>
+					<a href="" class="menu__link">Work</a>
 				</li>
 				<li class="links">
 					<img src="#" alt="logo" class="logo">
 				</li>
 				<li class="links">
-					<a href="" class="menu__link"></a>
+					<a href="" class="menu__link">Shop</a>
 				</li>
 				<li class="links">
-					<a href="" class="menu__link"></a>
+					<a href="" class="menu__link">Contact</a>
 				</li>
 			</ul>
 		</nav>
