--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bicycle_Theme</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header class="header">
@@ -17,7 +18,7 @@
 					<a href="" class="menu__link">Work</a>
 				</li>
 				<li class="links">
-					<img src="#" alt="logo" class="logo">
+					<img src="image/Logo.jpeg" alt="logo" class="logo">
 				</li>
 				<li class="links">
 					<a href="" class="menu__link">Shop</a>
