--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				<li class="links">
 					<a href="" class="menu__link">Work</a>
 				</li>
-				<li class="links">
-					<img src="image/Logo.jpeg" alt="logo" class="logo">
-				</li>
+				
+					<img src="image/Logo.png" alt="logo" class="logo">
+				
 				<li class="links">
 					<a href="" class="menu__link">Shop</a>
 				</li>
