--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header class="header">
-		<nav>
-			<ul id="menu">
+	<header class="header row">
+		<nav class="row">
+			<ul id="menu" class="row">
 				<li class="links">
 					<a href="" class="menu__link">About</a>
 				</li>
 				<li class="links">
 					<a href="" class="menu__link">Work</a>
 				</li>
-				
-					<img src="image/Logo.png" alt="logo" class="logo">
-				
+				<img src="image/Logo.png" alt="logo" class="logo">
 				<li class="links">
 					<a href="" class="menu__link">Shop</a>
 				</li>
