--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<nav class="row">
 			<ul id="menu" class="row">
 				<li class="links">
-					<a href="" class="menu__link">About</a>
+					<a href="" class="menu__link">About Us</a>
 				</li>
 				<li class="links">
 					<a href="" class="menu__link">Work</a>
